asic_imp/asic_imp/logs/hls_run_csim_6468.backup.log
  **** HLS Build v2025.1 6135595
INFO: [HLS 200-2005] Using work_dir C:/GEMM/asic_imp/asic_imp 
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/GEMM/asic_imp/asic_imp/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'C:/GEMM/asic_imp/asic_imp'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file C:/GEMM/asic_imp/hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=./src.cpp' from C:/GEMM/asic_imp/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/GEMM/asic_imp/src.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=./tb.cpp' from C:/GEMM/asic_imp/hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file 'C:/GEMM/asic_imp/tb.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from C:/GEMM/asic_imp/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7a200tfbg676-2' from C:/GEMM/asic_imp/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7a200t-fbg676-2'
INFO: [HLS 200-1465] Applying config ini 'clock=5ns' from C:/GEMM/asic_imp/hls_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [HLS 200-1465] Applying config ini 'clock_uncertainty=0.5ns' from C:/GEMM/asic_imp/hls_config.cfg(8)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 0.5ns.
INFO: [HLS 200-1465] Applying config ini 'package.output.format=rtl' from C:/GEMM/asic_imp/hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/GEMM/asic_imp/asic_imp/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../tb.cpp in debug mode
   Compiling ../../../../src.cpp in debug mode
csim.mk:94: recipe for target 'obj/src.o' failed
In file included from ../../../../src.cpp:3:
In file included from C:/Xilinx/2025.1/Vitis/include/ap_int.h:10:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_common.h:677:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_private.h:68:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_half.h:26:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_fpo.h:140:
In file included from C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/2025.1/Vitis/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../src.cpp:164:29: error: conditional expression is ambiguous; 'ap_int<8>' can be converted to 'ap_int<9 aka 9>' and vice versa
        M.e[r2][c]=(sign==1)?v:-v;
                            ^~ ~~
1 warning and 1 error generated.
make: *** [obj/src.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 1 seconds. Total elapsed time: 4.954 seconds; peak allocated memory: 157.441 MB.
